--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,14 @@
   <properties>
     <sbt.project.name>examples</sbt.project.name>
     <build.testJarPhase>none</build.testJarPhase>
+
     <build.copyDependenciesPhase>package</build.copyDependenciesPhase>
     <flume.deps.scope>provided</flume.deps.scope>
     <hadoop.deps.scope>provided</hadoop.deps.scope>
     <hive.deps.scope>provided</hive.deps.scope>
     <parquet.deps.scope>provided</parquet.deps.scope>
+    <powermock.version>1.6.3</powermock.version>
+    <junit.version>4.12</junit.version>
   </properties>
 
   <dependencies>
@@ -124,6 +127,33 @@
       <artifactId>parquet-hadoop-bundle</artifactId>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+      <version>${junit.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.holdenkarau/spark-testing-base_2.10 -->
+    <dependency>
+      <groupId>com.holdenkarau</groupId>
+      <artifactId>spark-testing-base_2.10</artifactId>
+      <version>2.1.1_0.7.4</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
